cmake_minimum_required(VERSION 3.23)
project(CPP_modules)

set(CMAKE_CXX_STANDARD 98)

add_executable(CPP_modules
#		mod_00/ex00/megaphone.cpp
		mod_00/ex01/contact.cpp mod_00/ex01/phonebook.cpp mod_00/ex01/main.cpp
#		mod_00/ex02/Account.cpp mod_00/ex02/tests.cpp

#		mod_01/ex00/main.cpp mod_01/ex00/Zombie.cpp mod_01/ex00/newZombie.cpp mod_01/ex00/randomChump.cpp
#		mod_01/ex01/main.cpp mod_01/ex01/Zombie.cpp mod_01/ex01/zombieHorde.cpp
		)
