cmake_minimum_required(VERSION 3.23)
project(CPP_modules)

set(CMAKE_CXX_STANDARD 98)

add_executable(CPP_modules
#		mod_00/ex00/megaphone.cpp
#		mod_00/ex01/contact.cpp mod_00/ex01/phonebook.cpp mod_00/ex01/main.cpp
#		mod_00/ex02/Account.cpp mod_00/ex02/tests.cpp

#		mod_01/ex00/main.cpp mod_01/ex00/Zombie.cpp mod_01/ex00/newZombie.cpp mod_01/ex00/randomChump.cpp
#		mod_01/ex01/main.cpp mod_01/ex01/Zombie.cpp mod_01/ex01/zombieHorde.cpp
#		mod_01/ex02/main.cpp
#		mod_01/ex03/main.cpp mod_01/ex03/Weapon.cpp mod_01/ex03/HumanA.cpp  mod_01/ex03/HumanB.cpp
#		mod_01/ex04/main.cpp
#		mod_01/ex05/main.cpp mod_01/ex05/Harl.cpp
#		mod_01/ex06/main.cpp mod_01/ex06/Harl.cpp mod_01/ex06/Harl.hpp

#		mod_02/ex00/main.cpp mod_02/ex00/Fixed.cpp
#		mod_02/ex01/main.cpp mod_02/ex01/Fixed.cpp
#		mod_02/ex02/main.cpp mod_02/ex02/Fixed.cpp
#		mod_02/ex03/main.cpp mod_02/ex03/Fixed.cpp mod_02/ex03/Point.cpp mod_02/ex03/bsp.cpp

#		mod_03/ex00/main.cpp mod_03/ex00/ClapTrap.cpp
		mod_03/ex01/main.cpp mod_03/ex01/ClapTrap.cpp mod_03/ex01/ScavTrap.cpp)
