cmake_minimum_required(VERSION 3.23)
project(CPP_modules)

set(CMAKE_CXX_STANDARD 98)

add_executable(CPP_modules
#		mod_00/ex00/megaphone.cpp
#		mod_00/ex01/contact.cpp mod_00/ex01/phonebook.cpp mod_00/ex01/main.cpp
#		mod_00/ex02/Account.cpp mod_00/ex02/tests.cpp

#		mod_01/ex00/main.cpp mod_01/ex00/Zombie.cpp mod_01/ex00/newZombie.cpp mod_01/ex00/randomChump.cpp
#		mod_01/ex01/main.cpp mod_01/ex01/Zombie.cpp mod_01/ex01/zombieHorde.cpp
#		mod_01/ex02/main.cpp
#		mod_01/ex03/main.cpp mod_01/ex03/Weapon.cpp mod_01/ex03/HumanA.cpp  mod_01/ex03/HumanB.cpp
#		mod_01/ex04/main.cpp
#		mod_01/ex05/main.cpp mod_01/ex05/Harl.cpp
#		mod_01/ex06/main.cpp mod_01/ex06/Harl.cpp mod_01/ex06/Harl.hpp

#		mod_02/ex00/main.cpp mod_02/ex00/Fixed.cpp
#		mod_02/ex01/main.cpp mod_02/ex01/Fixed.cpp
#		mod_02/ex02/main.cpp mod_02/ex02/Fixed.cpp
#		mod_02/ex03/main.cpp mod_02/ex03/Fixed.cpp mod_02/ex03/Point.cpp mod_02/ex03/bsp.cpp

#		mod_03/ex00/main.cpp mod_03/ex00/ClapTrap.cpp
#		mod_03/ex01/main.cpp mod_03/ex01/ClapTrap.cpp mod_03/ex01/ScavTrap.cpp
#		mod_03/ex02/main.cpp mod_03/ex02/ClapTrap.cpp mod_03/ex02/ScavTrap.cpp mod_03/ex02/FragTrap.cpp
#		mod_03/ex03/main.cpp mod_03/ex03/ClapTrap.cpp mod_03/ex03/ScavTrap.cpp mod_03/ex03/FragTrap.cpp mod_03/ex03/DiamondTrap.cpp

#		mod_04/ex00/main.cpp mod_04/ex00/Animal.cpp mod_04/ex00/Cat.cpp mod_04/ex00/Dog.cpp mod_04/ex00/WrongAnimal.cpp mod_04/ex00/WrongCat.cpp
#		mod_04/ex01/main.cpp mod_04/ex01/Animal.cpp mod_04/ex01/Cat.cpp mod_04/ex01/Dog.cpp mod_04/ex01/Brain.cpp mod_04/ex01/Brain.hpp
#		mod_04/ex02/main.cpp mod_04/ex02/Animal.cpp mod_04/ex02/Cat.cpp mod_04/ex02/Dog.cpp mod_04/ex02/Brain.cpp mod_04/ex02/Brain.hpp
#		mod_04/ex03/main.cpp mod_04/ex03/AMateria.cpp mod_04/ex03/Character.cpp mod_04/ex03/Cure.cpp mod_04/ex03/Ice.cpp mod_04/ex03/MateriaSource.cpp
#		mod_05/ex00/main.cpp mod_05/ex00/Bureaucrat.cpp
#		mod_05/ex01/main.cpp mod_05/ex01/Bureaucrat.cpp mod_05/ex01/Form.cpp
#		mod_05/ex02/main.cpp mod_05/ex02/Bureaucrat.cpp mod_05/ex02/Form.cpp
#		mod_05/ex02/ShrubberyCreationForm.cpp mod_05/ex02/RobotomyRequestForm.cpp mod_05/ex02/PresidentialPardonForm.cpp
#		mod_05/ex03/main.cpp mod_05/ex03/Bureaucrat.cpp mod_05/ex03/Form.cpp mod_05/ex03/Intern.cpp
#		mod_05/ex03/ShrubberyCreationForm.cpp mod_05/ex03/RobotomyRequestForm.cpp mod_05/ex03/PresidentialPardonForm.cpp mod_05/ex03/Intern.hpp

#		mod_06/ex00/main.cpp
#		mod_06/ex01/main.cpp
#		mod_06/ex02/main.cpp mod_06/ex02/Base.cpp mod_06/ex02/A.cpp mod_06/ex02/B.cpp mod_06/ex02/C.cpp
		mod_07/ex00/main.cpp )
